<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.watanaberyuunosuke.easycalc044.MainActivity"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_light">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number_view"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textSize="36sp"
            android:background="@android:color/background_light" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/all_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clear_or_all_clear"
            android:layout_weight="1" />

        <Button
            android:text="@string/plus_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plus_minus"
            android:layout_weight="1" />

        <Button
            android:text="@string/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/percent"
            android:layout_weight="1" />

        <Button
            android:text="@string/div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/div"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seven"
            android:layout_weight="1" />

        <Button
            android:text="@string/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eight"
            android:layout_weight="1" />

        <Button
            android:text="@string/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nine"
            android:layout_weight="1" />

        <Button
            android:text="@string/multip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/multip"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/four"
            android:layout_weight="1" />

        <Button
            android:text="@string/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/five"
            android:layout_weight="1" />

        <Button
            android:text="@string/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/six"
            android:layout_weight="1" />

        <Button
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plus"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/one"
            android:layout_weight="1" />

        <Button
            android:text="@string/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/two"
            android:layout_weight="1" />

        <Button
            android:text="@string/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/three"
            android:layout_weight="1" />

        <Button
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minus"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/zero"
            android:layout_weight="1" />

        <Button
            android:text="@string/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dot"
            android:layout_weight="1" />

        <Button
            android:text="@string/equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/equal"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
